--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -2,8 +2,12 @@
 
 html {
   box-sizing: border-box;
-  background: url(../images/cover-image.jpg) no-repeat center center fixed;
+  background: url(../images/kansikuva.jpg) no-repeat center center fixed;
   background-size: cover;
+}
+
+body {
+  font-family: 'Corben', cursive;
 }
 
 *, *:before, *:after {
@@ -28,6 +32,17 @@ ul, ol {
   font-size: 4em;
   width: 13em;
   text-align: center;
+  cursor: default;
+  text-shadow:
+   -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+     1px 1px 0 #000;
+  -webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+  -khtml-user-select: none;
+	user-select: none;
 }
 
 h1, h2 {
@@ -35,6 +50,6 @@ h1, h2 {
 }
 
 .blur {
-  background: url(../images/cover-image_blur.jpg) no-repeat center center fixed;
+  background: url(../images/kansikuva_blur.jpg) no-repeat center center fixed;
   background-size: cover;
 }
