--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -1,6 +1,6 @@
 .gallery-img {
-  width: 500px;
-  height: 500px;
+  max-width: 400px;
+  max-height: 400px;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
