Add background color that matches with cover image

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -2,6 +2,7 @@
 
 html {
   box-sizing: border-box;
+  background-color: #a66958;
   background: url(../kansikuva/normal.jpg) no-repeat center center fixed;
   background-size: cover;
 }
