--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -15,33 +15,16 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
-// Width of the content area
-$content-width:    800px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
-
-
-
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-  @media screen and (max-width: $device) {
-    @content;
-  }
-}
-
+$bg-color: rgb(210,203,202);
+$primary-color: rgb(123,35,21);
+$secondary-color: #f0f0ec;
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
   "normalize",
   "basscss",
+  "fonts",
   "general",
   "colors",
   "title-logo"
