--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -3,7 +3,7 @@
   font-family: 'Corben';
   font-style: normal;
   font-weight: 400;
-  src: local('Corben Regular'), local('Corben-Regular'), url(https://fonts.gstatic.com/s/corben/v9/EvCyyDNpF00ipP8gU9sM8g.woff2) format('woff2');
+  src: local('Corben Regular'), local('Corben-Regular'), url(../fonts/corben_regular.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 /* latin */
@@ -11,6 +11,6 @@
   font-family: 'Limelight';
   font-style: normal;
   font-weight: 400;
-  src: local('Limelight'), url(https://fonts.gstatic.com/s/limelight/v7/kD_2YDkzv1rorNqQ2oFK5ltXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
+  src: local('Limelight'), url(../fonts/limelight.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
